# NLP

./: .gitignore  README.md  morp_stem_lemm.py  nlp_regexp.py  preprocessing_package.py  pyproject.toml
nlp_utils/: __init__.py  morphology.py  preprocessing.py  regex_utils.py
