[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nlp-utils-package"
version = "0.1.0"
description = "A collection of NLP preprocessing and analysis tools"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { text = "MIT" }
dependencies = [
    "nltk",
    "matplotlib",
    "spacy",
    "morfessor"
]

[project.urls]
Homepage = "https://github.com/your-username/NLP"
Repository = "https://github.com/your-username/NLP.git"

[tool.setuptools.packages.find]
where = ["."]
include = ["nlp_utils*"]
